--- a/index.html
+++ b/index.html
@@ -17,6 +17,44 @@
     <button id="btnPing" class="btn btn-ghost" title="Ping backend">Ping</button>
   </div>
 </header>
+<!-- VALIDATOR -->
+<section class="card">
+  <h2>System Validator</h2>
+  <div class="grid grid-3">
+    <label class="field">
+      <span>Electrodes</span>
+      <input id="valElectrodes" type="number" min="4" max="256" value="32" />
+    </label>
+    <label class="field">
+      <span>ADC Resolution (bits)</span>
+      <input id="valAdcRes" type="number" min="8" max="24" value="18" />
+    </label>
+    <label class="field">
+      <span>ADC Sample Rate (SPS)</span>
+      <input id="valAdcRate" type="number" min="1000" max="1000000" value="1000000" />
+    </label>
+    <label class="field">
+      <span>Oversampling Factor</span>
+      <input id="valOversample" type="number" min="1" max="16" value="4" />
+    </label>
+    <label class="field">
+      <span>Compression Format (bits)</span>
+      <input id="valCompression" type="number" min="8" max="64" value="32" />
+    </label>
+    <label class="field">
+      <span>Frame Rate (fps)</span>
+      <input id="valFps" type="number" min="1" max="1000" value="100" />
+    </label>
+    <label class="field">
+      <span>Max Bandwidth (Mbps)</span>
+      <input id="valMaxBw" type="number" min="1" max="10000" value="1000" />
+    </label>
+  </div>
+  <div class="action-row">
+    <button onclick="runValidator()" class="btn btn-primary">Run Validation</button>
+  </div>
+  <pre id="valResult" class="code"></pre>
+</section>
 
 <main class="container">
   <!-- CONNECTION -->
@@ -238,5 +276,6 @@
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
