--- a/index.html
+++ b/index.html
@@ -198,6 +198,8 @@
             <option>16</option>
             <option selected>32</option>
             <option>64</option>
+            <option>264</option>
+            
           </select>
         </label>
         <label class="field">
@@ -275,6 +277,7 @@
 <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
